force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/PBS_AAAP_Agency_Requirement__c.object-meta.xml
<CustomObject>
    <description>AAAP - This object store all information related to an Agency requirement in AAAP</description>
    <label>Agency Requirement</label>
    <nameField>
        <label>Agency Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>