force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/AgencyRequirementExternalId__c.field-meta.xml
<CustomField>
    <fullName>AgencyRequirementExternalId__c</fullName>
    <externalId>true</externalId>
    <label>AgencyRequirementExternalId</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>