force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/BSAC_for_Continuing_Space_per_ABOA_SF__c.field-meta.xml
<CustomField>
    <fullName>BSAC_for_Continuing_Space_per_ABOA_SF__c</fullName>
    <label>BSAC for Continuing Space per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>