force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/isNewRequirement__c.field-meta.xml
<CustomField>
    <fullName>isNewRequirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for showing the &quot;Existing Lease Information&quot; Section or not based on &quot;Type of Reqirement&quot;.</description>
    <inlineHelpText>This field is used for showing the &quot;Existing Lease Information&quot; Section or not based on &quot;Type of Reqirement&quot;.</inlineHelpText>
    <label>isNewRequirement</label>
    <type>Checkbox</type>
</CustomField>