force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/Master_Agency_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Master_Agency_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Agency Requirement</label>
    <referenceTo>PBS_AAAP_Agency_Requirement__c</referenceTo>
    <relationshipLabel>Agency Requirements</relationshipLabel>
    <relationshipName>Agency_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>