force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_AASN_AAAP_MANAGER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AASN_AAAP_MANAGER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned AAAP Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agency_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>