force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency Requirements</relationshipLabel>
    <relationshipName>Agency_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>