force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_BSAC_per_ABOA__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BSAC_per_ABOA__c</fullName>
    <label>BSAC for New Space per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>