force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_CONTACT_AGENCY_PHONE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CONTACT_AGENCY_PHONE__c</fullName>
    <label>Agency Contact Phone Number</label>
    <type>Phone</type>
</CustomField>