force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_CONTRACTING_OFF_FNAME__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CONTRACTING_OFF_FNAME__c</fullName>
    <label>Contracting Officer First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>