force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_CONTRACTING_OFF_PHONE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CONTRACTING_OFF_PHONE__c</fullName>
    <label>Contracting Officer Phone Number</label>
    <type>Phone</type>
</CustomField>