force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_CURR_LEASE_EXPIRE_DT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CURR_LEASE_EXPIRE_DT__c</fullName>
    <label>Current Lease Expiration Date</label>
    <type>Date</type>
</CustomField>