force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_CURRENT_BUILDING_NAME__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CURRENT_BUILDING_NAME__c</fullName>
    <label>Building Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>