force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_CURRENT_GSA_LEASE_NUM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CURRENT_GSA_LEASE_NUM__c</fullName>
    <label>Current GSA Lease #</label>
    <length>32</length>
    <type>Text</type>
</CustomField>