force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_CURRENT_ZIP__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CURRENT_ZIP__c</fullName>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>