force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_DATE_REQ_RECEIVED_BY_AAP__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_DATE_REQ_RECEIVED_BY_AAP__c</fullName>
    <label>Date Requirement Received by AAAP</label>
    <type>Date</type>
</CustomField>