force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_DELINEATED_AREA_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_DELINEATED_AREA_TYPE__c</fullName>
    <description>User delineated or Alternate delineated area type</description>
    <label>Delineated Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Delineated Area</fullName>
                <default>true</default>
                <label>User Delineated Area</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>