force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_DELINEATED_AREA_TYPE_DESC__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_DELINEATED_AREA_TYPE_DESC__c</fullName>
    <label>Alt. Delineated Area Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PBS_AAAP_DELINEATED_AREA_TYPE__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Congressional District</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>SubMarket</fullName>
            </value>
            <value>
                <fullName>User Delineated</fullName>
            </value>
            <value>
                <fullName>zip code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>