force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_DELINEATED_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_DELINEATED_DESCRIPTION__c</fullName>
    <description>Placeholder for alternate delineated area descriptor</description>
    <label>Alt. Delineated Area Descriptor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PBS_AAAP_DELINEATED_AREA_TYPE_DESC__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Descriptor 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>