force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_HVAC_OVERTIME_HOURS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_HVAC_OVERTIME_HOURS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated HVAC Overtime hours/year:</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>