force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_Include_HVAC_Overtime__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Include_HVAC_Overtime__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include HVAC Overtime</label>
    <type>Checkbox</type>
</CustomField>