force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_LEASE_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LEASE_TERM__c</fullName>
    <label>Lease Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15 years, 13 firm</fullName>
            </value>
            <value>
                <fullName>17 years, 15 firm</fullName>
            </value>
            <value>
                <fullName>25 months, 16 firm</fullName>
            </value>
            <value>
                <fullName>19 months, 11 firm</fullName>
            </value>
            <value>
                <fullName>10 years, 8 firm</fullName>
            </value>
            <value>
                <fullName>10 years,5 firm</fullName>
                <label>10 years, 5 firm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>