force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_LEGACY_AGENCY_REQUIREMENT_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LEGACY_AGENCY_REQUIREMENT_ID__c</fullName>
    <description>Used for migration purpose only.</description>
    <externalId>true</externalId>
    <label>Legacy Agency Requirement ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>