force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_MIN_CONT_USF__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_MIN_CONT_USF__c</fullName>
    <label>Minimum Contiguous ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>