force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_NICKNAME__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_NICKNAME__c</fullName>
    <label>Project Nickname</label>
    <length>25</length>
    <type>Text</type>
</CustomField>