force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_OFFICIAL_NUM_PARKING_SPACES__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OFFICIAL_NUM_PARKING_SPACES__c</fullName>
    <label>Official # of Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>