force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Project_ID__c</fullName>
    <label>Project Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>