force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_PV_OTHER_UPFRONT_COSTS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_PV_OTHER_UPFRONT_COSTS__c</fullName>
    <label>Estimated Build Out Over TI per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>