force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_REQ_STATUS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_REQ_STATUS__c</fullName>
    <label>Agency Requirement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pending Selected</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>