force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_RLP__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_RLP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RLP</label>
    <referenceTo>PBS_AAAP_RLP__c</referenceTo>
    <relationshipLabel>Agency Requirements</relationshipLabel>
    <relationshipName>Agency_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>