force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_RLP_Number__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_RLP_Number__c</fullName>
    <label>RLP Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>