force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_SC_REALTY_PHONE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_SC_REALTY_PHONE__c</fullName>
    <label>Realty Specialist Phone Number</label>
    <type>Phone</type>
</CustomField>