force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_TIUSED_FOR_FIRM_TERM_NEW__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TIUSED_FOR_FIRM_TERM_NEW__c</fullName>
    <inlineHelpText>This value should match the project-specific advertisement.</inlineHelpText>
    <label>Min TI for New Space per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>