force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_TIUSED_FOR_FIRM_TERM_SUCC__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TIUSED_FOR_FIRM_TERM_SUCC__c</fullName>
    <label>TI Allowance for Continuing Space per AB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>