force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_TOT_RESV_PARKING_SPACES_GARAGE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TOT_RESV_PARKING_SPACES_GARAGE__c</fullName>
    <defaultValue>0</defaultValue>
    <label># of Reserved Garage Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>