force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_TYPE_OF_REQUIREMENT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_TYPE_OF_REQUIREMENT__c</fullName>
    <label>Type of Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Continuing</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>