force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_USF_REQ_MAX__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_USF_REQ_MAX__c</fullName>
    <label>Range of ABOA SF - Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>