force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/fields/PBS_AAAP_WALKABLE_2640_FEET_METRO__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_WALKABLE_2640_FEET_METRO__c</fullName>
    <label>Proximity to Rail Transit  w/i 2640ft</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>