force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>PBS_AAAP_NICKNAME__c</columns>
    <columns>PBS_AAAP_Account_Name__c</columns>
    <columns>PBS_AAAP_REQ_STATUS__c</columns>
    <columns>PBS_AAAP_TYPE_OF_REQUIREMENT__c</columns>
    <columns>PBS_AAAP_LEGACY_AGENCY_REQUIREMENT_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PBS_AAAP_Project_ID__c</columns>
    <columns>PBS_AAAP_RLP__c</columns>
    <columns>PBS_AAAP_RLP_Number__c</columns>
    <columns>PBS_AAAP_LEASE_TERM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Historical__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>