force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/listViews/My_Agency_Req.listView-meta.xml
<ListView>
    <fullName>My_Agency_Req</fullName>
    <columns>NAME</columns>
    <columns>PBS_AAAP_Account_Name__c</columns>
    <columns>PBS_AAAP_CURRENT_BUILDING_NAME__c</columns>
    <columns>PBS_AAAP_CURRENT_CITY__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PBS_AAAP_Account_Name__c</field>
        <operation>contains</operation>
        <value>one</value>
    </filters>
    <label>My Agency Req</label>
</ListView>