force-app/main/default/objects/PBS_AAAP_Agency_Requirement__c/listViews/R4_Active_Requirements.listView-meta.xml
<ListView>
    <fullName>R4_Active_Requirements</fullName>
    <columns>NAME</columns>
    <columns>PBS_AAAP_Account_Name__c</columns>
    <columns>PBS_AAAP_RLP_Number__c</columns>
    <columns>PBS_AAAP_Project_ID__c</columns>
    <columns>PBS_AAAP_REQ_STATUS__c</columns>
    <columns>PBS_AAAP_DATE_REQ_RECEIVED_BY_AAP__c</columns>
    <columns>PBS_AAAP_AASN_AAAP_MANAGER__c</columns>
    <columns>PBS_AAAP_USF_REQ_MIN__c</columns>
    <columns>PBS_AAAP_USF_REQ_MAX__c</columns>
    <columns>PBS_AAAP_CURRENT_BUILDING_NAME__c</columns>
    <columns>PBS_AAAP_CURRENT_STREET_ADDRESS__c</columns>
    <columns>PBS_AAAP_CURRENT_CITY__c</columns>
    <columns>PBS_AAAP_CURRENT_STATE__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PBS_AAAP_REQ_STATUS__c</field>
        <operation>equals</operation>
        <value>Pending,Pending Selected</value>
    </filters>
    <filters>
        <field>PBS_AAAP_Region__c</field>
        <operation>equals</operation>
        <value>Region 4</value>
    </filters>
    <label>R4 Active Requirements - Shared</label>
    <sharedTo>
        <role>AAAP_Manager_Region_4</role>
        <role>AAAP_Supervisor</role>
    </sharedTo>
</ListView>